fix: rename file git-commands.md

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>GameSecretNumber</title>
   </head>
   <body>
-
+    <p>Открой консоль</p>
     <script src="./gameSecretNumber.js"></script> 
   </body>
 </html>
