feat: add array-custom-methods

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GameSecretNumber</title>
+    <title>My answers</title>
   </head>
   <body>
     <p>Открой консоль</p>
-    <script src="./gameSecretNumber.js"></script> 
+    <script src="./gameSecretNumber.js"></script>
+    <script src="./array-custom-methods.js"></script>  
   </body>
 </html>
